[package]
name = "trades_subsystem"
version = "0.1.0"
edition = "2021"

[dependencies]
amiquip = "0.4.2"
rand = "0.8.5"
serde = "1.0.216"
serde_json = "1.0"
chrono = "0.4"
criterion = "0.5.1"
rayon = "1.5.3"
log = "0.4"
env_logger = "0.11.5"
#flamegraph = "0.6.6"
#heaptrack = "0.4.0"
nom = "7.1.3" 

[profile.release]
debug = true

[[bench]]
name = "my_bench"
harness = false

[[bench]]
name = "decision_bench"
harness = false

[[bench]]
name = "trade_bench"
harness = false

[[bench]]
name = "messages_bench"
harness = false

[lib]
name = "trades_subsystem" 
path = "src/lib.rs"

